--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <header class="App-header">
       <h1>Welcome to The Spark Foundation Donation Page</h1>
       <form>
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname">
+        <label for="fname">Email Address:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">Contact Number:</label><br>
+        <input type="text" id="lname" name="lname">
         <script
           src="https://checkout.razorpay.com/v1/payment-button.js"
           data-payment_button_id="pl_HTkq6Wu4lNQrvO"
