--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             aria-describedby="emailHelp"
             placeholder="Enter email"
           />
-          <small id="emailHelp" class="form-text text-muted"
+<!--           <small id="emailHelp" class="form-text text-muted"
             >We'll never share your email with anyone else.</small
-          >
+          > -->
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Name</label>
