--- a/index.html
+++ b/index.html
@@ -59,11 +59,7 @@
         </div>
         <br />
         <br />
-        <script
-          src="https://checkout.razorpay.com/v1/payment-button.js"
-          data-payment_button_id="pl_HTkq6Wu4lNQrvO"
-          async
-        ></script>
+    <script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Hok1A6fACTUhds" async> </script> 
       </form>
     </header>
   </div>
